<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/popupbackground"
        android:orientation="vertical"
        android:padding="1dp" >

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textCursorDrawable="@drawable/cursor" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextNewPassword"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:ems="10"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textCursorDrawable="@drawable/cursor" />

        <EditText
            android:id="@+id/editTextRepeatNewPassword"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:ems="10"
            android:hint="@string/repeatnewpassword"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textCursorDrawable="@drawable/cursor" />

        <Button
            android:id="@+id/buttonCreateAcc"
            style="@style/btnStyleOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/changepassword" />
    </LinearLayout>

</LinearLayout>