<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/popupbackground"
        android:orientation="vertical"
        android:padding="1dp" >

        <TextView
            android:id="@+id/textViewDeleteAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteaccounttext"
            android:textColor="#ffffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textCursorDrawable="@drawable/cursor" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonDeleteAcc"
            style="@style/btnStyleOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/deleteaccount" />
    </LinearLayout>

</LinearLayout>