<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@layout/gradient1"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#20000000"
        android:clickable="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="5dip"
            android:layout_weight="0.19"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/edititem"
            android:textColor="#FFFFFF"
            android:textSize="37sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDeleteItem"
            style="@style/btnStyleOrange"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/delete_icon" />

        <Button
            android:id="@+id/buttonSaveItem"
            style="@style/btnStyleOrange"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/save_icon" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progressbar3"
            android:interpolator="@android:anim/linear_interpolator"
            android:minHeight="48dp"
            android:progressDrawable="@drawable/progressbar3"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:clickable="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/article_icon" />

        <EditText
            android:id="@+id/editTextName"
            style="@style/editTextLoginStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/name"
            android:maxLength="50"
            android:textCursorDrawable="@drawable/cursor" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextAmount"
        style="@style/editTextLoginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/amount"
        android:maxLength="50"
        android:textCursorDrawable="@drawable/cursor" >
    </EditText>

    <EditText
        android:id="@+id/editTextDescription"
        style="@style/editTextLoginStyle"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="15dip"
        android:layout_weight="0.38"
        android:background="#FFFFFF"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:ems="10"
        android:hint="@string/description"
        android:maxLength="300"
        android:textCursorDrawable="@drawable/cursor" >
    </EditText>

</LinearLayout>